add new fileds in home page

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -13,8 +13,8 @@
           </div>
         {% endif %}
       </div>
-      <h2 class="article-title">{{ object.title }}</h2>
-      <p class="article-content">{{ object.content }}</p>
+      <h2 class="article-title">{{ object.dcn_number }}</h2>
+      <p class="article-content">{{ object.description_of_change }}</p>
     </div>
   </article>
 {% endblock content %}
