--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -17,14 +17,15 @@
                 {{ form.description_of_change|as_crispy_field }}
             </div>
         </div>
-        <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Post</button>
-        </div>
         <div class="form-row">
             <div class="form-group col-md-6 mb-0">
                 {{ form.priority|as_crispy_field }}
             </div>
         </div>
+        <div class="form-group">
+            <button class="btn btn-outline-info" type="submit">Save</button>
+        </div>
+     
     </form>
 </div>
 {% endblock content %}
