--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -58,6 +58,7 @@
     </header>
     <main role="main" class="container">
         <div class="row">
+            {% block content-main %}{% endblock %}
             <div class="col-md-8">
                 {% if messages %}
                 {% for message in messages %}
