--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -4,6 +4,8 @@
 <div class="content-section">
     <form method="POST">
         {% csrf_token %}
+        <!--{{ form }}-->
+
         <div class="form-row">
             <div class="form-group col-md-6 mb-0">
                 {{ form.dcn_number|as_crispy_field }}
@@ -19,13 +21,22 @@
         </div>
         <div class="form-row">
             <div class="form-group col-md-6 mb-0">
-                {{ form.priority|as_crispy_field }}
+                {{ form.reason_of_change|as_crispy_field }}
             </div>
         </div>
+        <div class="form-row">
+            <div class="form-group col-md-6 mb-0">
+                {{ form.priority|as_crispy_field }}
+            </div>
+            <div class="form-group col-md-6 mb-0">
+                {{ form.closes_dcr|as_crispy_field }}
+            </div>
+        </div>
+
         <div class="form-group">
             <button class="btn btn-outline-info" type="submit">Save</button>
         </div>
-     
+
     </form>
 </div>
 {% endblock content %}
